change condition to check for empty title scenario

--- a/bookmarks-scripted.html
+++ b/bookmarks-scripted.html
@@ -1,4 +1,4 @@
 <DL>
 <DT><A HREF="http://encyclopedia.thefreedictionary.com/How+many+angels+can+dance+on+the+head+of+a+pin%3f">How+many+angels+can+dance+on+the+head+of+a+pin%3f</A>
-<DT><A HREF="www.youtube.com">www.youtube.com</A>
+<DT><A HREF="www.youtube.com">youtube</A>
 </DL>
